--- a/app/src/main/res/layout/activity_long_record.xml
+++ b/app/src/main/res/layout/activity_long_record.xml
@@ -45,17 +45,21 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.316" />
 
-    <Button
-        android:id="@+id/buttonRight"
-        android:layout_width="60dp"
-        android:layout_height="45dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="20dp"
-        android:layout_marginBottom="45dp"
-        android:background="@drawable/arrowright"
-        android:padding="8dp"
-        android:text="" />
+
+    <TextView
+        android:id="@+id/Occurrences"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="Number of occurrences: 0"
+        android:textColor="@color/HeaderColor"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.109"
+        android:layout_below="@+id/buttonRecord"
+        android:layout_marginTop="15dp"/>
 
 
 
