--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="HeaderColor">#0D47A1</color>
+    <color name="TextColor">#811442</color>
     <color name="my_button_color">#8061CF</color>
     <color name="pressed_record_button_color">#ED151C</color>
     <color name="pressed_play_button_color">#4D27D1</color>
